--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>
         <div class="cabecera">
             <img id="imagenlogo" src="img/Logo.png" alt="">
-                <div class="menu">
+            <div class="menu">
+                    <div class="rayas"><img src="img/menu.png"></div>
                     <ul>
                         <a class="enlaces" href="Index.html">NOVEDADES</a>
                         <a class="enlaces" href="Index.html">HOMBRE</a>
@@ -20,13 +21,13 @@
                         <a class="enlaces" href="Index.html">ACCESORIOS</a>
 
                     </ul>
-                </div>
-                <div class="iconos">
-                <a href="Index.html">Buscar</a>
+            </div>
+            <div class="iconos">
+                <div class="buscar"><a href="Index.html">Buscar</a></div>
                 <img class="imagen-megusta" src="img/me-gusta.png">
                 <img class="imagen-usuario" src="img/usuario.png">
                 <img class="imagen-bolso" src="img/bolso.png">
-                </div>
+            </div>
     </div>
         
     </header>
